--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.29.1",
-    "lucide-react": "^0.553.0"
+    "lucide-react": "^0.553.0",
+    "mysql2": "^3.11.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
